[package]
name = "desub-current"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "2.0.9"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
frame-metadata = { git = "https://github.com/paritytech/frame-metadata", branch = "insipx-aj-docs-rebase", features = ["v14", "std", "scale-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
codec = { version = "3.6.12", package = "parity-scale-codec", features = ["bit-vec"] }
hex = "0.4.3"
scale-info = { version = "2.11.1", features = ["bit-vec", "derive"] }
bitvec = { version = "1.0.1", features = ["serde", "alloc"] }
desub-common = { path = "../desub-common" }

[dev-dependencies]
serde_json = "1"
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
