[package]
name = "desub-legacy"
version = "0.0.1"
authors = [ "Andrew Plaza <andrew.plaza@parity.io>" ]
edition = "2021"
repository = "https://github.com/paritytech/desub"

[dependencies]
log = "0.4"
thiserror = "2.0.9"
codec = { version = "3.6.12", package = "parity-scale-codec", features = ["bit-vec"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
onig = { version = "6.4.0", default-features = false }
derive_more = "1.0.0"
dyn-clone = "1.0"
hex = "0.4"
bitvec = { version = "1.0.1", features = ["serde", "alloc"] }

desub-common = { path = "../desub-common/" }

pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
frame-metadata = { version = "16.0.0", default-features = false }
#frame-metadata = { git = "https://github.com/paritytech/frame-metadata", branch = "insipx-aj-docs-rebase", features = ["legacy"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"
hex = "0.4"

