[package]
name = "integration-tests"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2021"
autotests = false
repository = "https://github.com/paritytech/desub"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
desub-legacy = { path = "../desub-legacy" }
desub-json-resolver = { path = "../desub-json-resolver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
codec = { version = "3.6.12", package = "parity-scale-codec" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409" }
pretty_env_logger = "0.4"
log = "0.4"
hex = "0.4"
paste = "1.0.3"
anyhow = "1"

[[test]]
name = "integration-tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = []
